navigation visibility fix

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -98,6 +98,7 @@
     // z-index: 1500;
     opacity: 1;
     width: 100%;
+    visibility: visible;
   }
 
   // ICON
